src/Components/DesignersSection/designersSection.css
.upgradeSection__MainContainer{
    background-image: url(../../assets/designers-bg.png);
    background-repeat: no-repeat;
    background-size: contain;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}
/* NEW STYLES */

.designersSection__ContentContainer{
    display: flex;
    flex-direction: column;
    gap: 50px;
}
.designerSection__Title{
    font-size: 80px;
    font-family: "DM Serif Text", serif;
    font-weight: 400;
    color: #242424;
    font-style: italic;
    line-height: 75px;
}
.designerSection__Title2{
    font-family: "Archivo", sans-serif;
    font-weight: 700;
}
.designerSection__Text{
    color: #242424;
    font-size: 24px;
}
.designerSection__Btn-Container{
    display: flex;
    justify-content: center;
}
.upgradeSection__Container{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;    
    width: 50%;
    gap: 50px;
    padding: 20px;
}


@media (max-width: 1200px) {
    .upgradeSection__MainContainer{                
        justify-content: flex-start;             
        height: 100%;
        background-color: #FFF;
    }
    .designerSection__Title{
        font-size: 40px;
        line-height: 40px;        
    }
    .designerSection__Text{        
        font-size: 18px;
        text-align: left;
    }
}

@media (max-width: 576px) {
    .upgradeSection__MainContainer{
        background-image: url(../../assets/designers-bg-mobile.png);                
        background-repeat: no-repeat;
        background-size: contain;           
        height: 110vh;
        justify-content: center;
        align-items: center;
    }
    .upgradeSection__Container{        
        width: 100%;
        margin-top: 350px;        
    }
    
}

